change it sample to read!delete the word unused.

--- a/main.tex
+++ b/main.tex
@@ -7,7 +7,7 @@
 \begin{document}
 {
     \centering
-    {\LARGE\textbf{‘海大金枪鱼’号AUV设计报告书}} \\
+    {\LARGE\textbf{***设计报告书}} \\
     {\vspace{3.5in}
     签名：
     \rule[-.4pt]{6em}{.4pt}\footnotemark[1] \qquad
@@ -15,26 +15,20 @@
     \rule[-.4pt]{6em}{.4pt}\footnotemark[3] \qquad
     \rule[-.4pt]{6em}{.4pt}\footnotemark[4] \qquad
     \rule[-.4pt]{6em}{.4pt}\footnotemark[5] \qquad}\\
-    \footnotetext[1]{张志鹏：空间运动数学模型以及论文的\LaTeX 排版}
-    \footnotetext[2]{黄德诚：能源动力系统设计以及浮力调节部分}
-    \footnotetext[3]{黎运杰：耐压壳体、浮力材料选型设计以及浮力调节部分}
-    \footnotetext[4]{陈骏豪：密封和绝缘设计}
-    \footnotetext[5]{周子璇：海洋环境、设备安全、法律法规论述}
+    \footnotetext[1]{name1}
+    \footnotetext[2]{name2}
+    \footnotetext[3]{name3}
+    \footnotetext[4]{name4}
+    \footnotetext[5]{name5}
 }
 
     
 \clearpage
 \tableofcontents
 \pagebreak
-\subfile{material}
+\subfile{base}
 \clearpage
-\subfile{fulitiaojie}
+\subfile{equation}
 \clearpage
-\subfile{mifen}
-\clearpage
-\subfile{source-power}
-\clearpage
-\subfile{yd-equation}
-\clearpage
-\subfile{other}
+\subfile{table}
 \end{document}
